# python-contentdesk-opendata

./: .gitignore  CHANGELOG-2.0.md  CHANGELOG-2.1.md  Readme.md  pyproject.toml
.github/workflows/: python-publish.yml  python-test-publish.yml
src/contentdesk-opendata/: __init__.py  extract.py  getProducts.py  load.py  transform.py
src/contentdesk-opendata/load/: load.py
src/contentdesk-opendata/transform/: transform.py
src/contentdeskopendata/: __init__.py
src/contentdeskopendata/extract/: extract.py
src/contentdeskopendata/load/: changelog.py  geojson.py  load.py  map.html  map.py  mapCss.py  mapHtml.py  mapJs.py  openApiConf.py
src/contentdeskopendata/transform/: transform.py
src/service/: debug.py
